Working all modes, passing all hard tests. Rollback, numeric repartitions, etc..